# vision_opencv_ros

./: CMakeLists.txt  README.md  package.xml
include/stitcher/: colors.txt  digit_recog.cpp  digit_recog.h  findcolor.cpp  findcolor.h  finddistance.cpp  finddistance.h  getImage.cpp  getImage.h  main.cpp  model4.yml  transf.cpp  transf.h  transfUNI.cpp  transfUNI.h  valve.cpp  valve.h  videoOCR.cpp  videoOCR.h
launch/: usbCameraLaunch.launch
msg/: camera_poi.msg
src/: main.cpp
